--- a/customer/src/main/resources/application.yml
+++ b/customer/src/main/resources/application.yml
@@ -3,5 +3,17 @@ server:
 spring:
   application:
     name: customer
+  datasource:
+    password: password
+    url: jdbc:postgresql://localhost:5432/customer
+    username: rushan
+  jpa:
+    hibernate:
+      ddl-auto: create-drop
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+        format_sql: true
+    show-sql: true
   profiles:
     active: default
