init fraud microservice and configure db connection

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,8 @@
 
     <modules>
         <module>customer</module>
+        <module>fraud</module>
+
     </modules>
 
     <name>SpringMicroservices</name>
