--- a/customer/src/main/resources/application.yml
+++ b/customer/src/main/resources/application.yml
@@ -1,5 +1,6 @@
 server:
   port: 8080
+
 spring:
   application:
     name: customer
@@ -17,3 +18,8 @@ spring:
     show-sql: true
   profiles:
     active: default
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka
