--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>fraud</module>
         <module>eureka-server</module>
         <module>apigw</module>
+        <module>notification</module>
 
     </modules>
 
