--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>eureka-server</module>
         <module>apigw</module>
         <module>notification</module>
+        <module>amqp</module>
 
     </modules>
 
