--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>apigw</module>
         <module>notification</module>
         <module>amqp</module>
+        <module>clients</module>
 
     </modules>
 
